--- a/formulario.html
+++ b/formulario.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="formulario.css" media="screen">
 
         <!-- Título da página (aparece na aba) -->
-        <title>Cadastro</title>
+        <title>Pacoococococ</title>
     </head>
 
     <body>  
